<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/generalSettings">

        <DropDownPreference
            android:id="@+id/languagePreference"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:id="@+id/themePreference"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio">

        <SwitchPreferenceCompat
            android:id="@+id/musicSwitchPreference"
            app:defaultValue="true"
            app:key="music"
            app:title="@string/music" />

        <SwitchPreferenceCompat
            android:id="@+id/soundSwitchPreference"
            app:defaultValue="true"
            app:key="sound"
            app:title="@string/sound" />

        <SwitchPreferenceCompat
            android:id="@+id/vibrationSwitchPreference"
            app:defaultValue="true"
            app:key="vibration"
            app:title="@string/vibration" />

    </PreferenceCategory>

</PreferenceScreen>