<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second"
    android:orientation="vertical"
    android:theme="@style/Theme.Konfetti"
    tools:context=".ResultActivity">

    <com.techmania.mathe_game.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCongratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/congratulation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textScoreValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/score"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textScoreValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCongratulation" />

    <TextView
        android:id="@+id/textScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/_60"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textScore"
        app:layout_constraintTop_toBottomOf="@+id/textCongratulation" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScoreValue"
        app:srcCompat="@drawable/third"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttonPlayAgain"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/play_again"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonExit"
            app:layout_constraintEnd_toStartOf="@+id/buttonExit"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/exit"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPlayAgain" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>