<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_new"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:theme="@style/Theme.GamePage">

    <ImageView
        android:id="@+id/imageSettings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <!--Spinner
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:foregroundTintMode="screen"
            android:popupElevation="20dp"
            android:scrollbarSize="20dp"
            android:soundEffectsEnabled="true"
            android:spinnerMode="dialog"
            android:textAlignment="center" /-->

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginTop="75dp"
            android:fontFamily="casual"
            android:text="@string/addition"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/subtraction"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/multiplication"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/division"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>